Attempting to prevent jumpiness  in mobile

--- a/src/assets/styles/global.scss
+++ b/src/assets/styles/global.scss
@@ -2,6 +2,10 @@
   .xs-hidden {
     display: none;
   }
+  .appMain {
+    width: 100%;
+    overflow: hidden;
+  }
 }
 body {
   width: 100%;
